# svc-auth

./: .clangd  .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-test  build.sh  build_aaguid.py  build_cmake  config.json  dev  docker-compose.yml  native_build.sh  run  run.sh  shell.nix  update
.github/workflows/: deploy.yml
docker/: test-entrypoint.sh
include/: DBManager.hpp  HealthCheckController.hpp  RequestCheck.hpp  ResponseHandler.hpp  aaguid_map.hpp  codes.hpp  config.hpp  responseHandler.hpp
include/db/: DBManager.hpp  Repository.hpp
include/dto/: ipDoxDto.hpp  ipDoxResponseDto.hpp  metaDto.hpp  userDto.hpp  userResponseDto.hpp
include/http/: httpClient.hpp  httpError.hpp  httpResult.hpp  ipDoxClient.hpp  rabbitMqClient.hpp  usersClient.hpp
include/services/: RateLimiter.hpp  emailVerefServices.hpp  hashUtil.hpp  httpUtils.hpp  jwtUtil.hpp  minecraftTokenServices.hpp  uuidUtils.hpp
secrets/: README  ed25519_private.pem  ed25519_public.pem
src/: AuthController.cpp  ClientInfoController.cpp  DBManager.cpp  HealthCheckController.cpp  RequestCheck.cpp  ResponseHandler.cpp  config.cpp  main.cpp  responseHandler.cpp  test.cpp
src/db/: DBManager.cpp  Repository.cpp
src/middleware/: LoggerMiddleware.cpp  TraceIdMiddleware.cpp
src/services/: RateLimiter.cpp  emailVerefServices.cpp  hashUtil.cpp  httpUtils.cpp  jwtUtil.cpp  minecraftTokenServices.cpp  uuidUtils.cpp
